@@ -109,7 +109,12 @@ version 2.91
 	on the number of a-z and A-Z characters in the query, and this
 	implementation puts a hard limit of 32 bits to make rescource
 	allocation easy. This about doubles entropy over the standard
-	random ID and random port combination. 
+	random ID and random port combination. This technique can interact
+	badly with rare broken DNS servers which don't preserve the case
+	of the query in their reply. The first time a reply is returned
+	which matches the query in all respects except case, a warning
+	will be logged. If this coincides with DNS not functioning, it
+	is necessary to disable bit 0x20 encoding with --no-0x20-encode.
 
 	
 version 2.90
